# uwazi-statistics

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: serve_local.py
templates/: dashboard.html.j2  embed.html.j2
tests/: test_aggregations.py  test_discover.py  test_smoke.py
tests/fixtures/: upr_info_sample.py
uwazi_charts/: __init__.py  aggregations.py  build.py  charts.py  discover.py  fetch.py  flatten.py  render.py  rison.py
