[project]
name = "uwazi-statistics"
version = "0.0.1"
description = "Auto-generate static aggregate dashboards from any Uwazi instance"
authors = [{ name = "Lukasz Szoszkiewicz", email = "l.szoszkiewicz@amu.edu.pl" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
uwazi-charts = "uwazi_charts.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uwazi_charts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]  # let ruff format handle line length

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
